[project]
name = "uto-markets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "polars>=1.35.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.0",
]
